@@ -80,6 +80,9 @@ main(int argc, char *argv[])
     struct unit *x, *y;
     Word *arrayd;
 
+    fprintf(stderr,"DEPRECATION WARNING:  This command is scheduled for removal.  Please contact the developers if you use this command.\n\n");
+    sleep(1);
+
     if ( BU_STR_EQUAL(argv[1], "-h") || BU_STR_EQUAL(argv[1], "-?") )
 	printusage();
     if (argc == 1)
